changes link of book table

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 
         </nav>
-        <a href="#" class="btn">book a table</a>
+        <a href="#book" class="btn">book a table</a>
 
 
     </header>
