git commit -m"changes the link of book table"

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
         <div class="row">
             <h3>sip better</h3>
-            <a href="#" class="btn">buy one now</a>
+            <a href="#menu" class="btn">buy one now</a>
 
             <marquee dir="rtl">
                 <img src="./coffeeimg/cappiccino.jpg" class="main-home-image" alt="">&nbsp;&nbsp;&nbsp;
@@ -116,7 +116,7 @@
                 <div class="content">
                     <h3>our special coffee</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem asperiores repudiandae.</p>
-                    <span>50$</span>
+                    <span>50$</span> 
 
 
                 </div>
