git commit -m"added a buy link"

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <div class="content">
                     <h3>our special coffee</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem asperiores repudiandae.</p>
-                    <span>50$</span> 
+                    <span>50$</span> &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; <span>buy</span>
 
 
                 </div>
@@ -128,7 +128,7 @@
                     <h3>our special coffee</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem asperiores repudiandae fugit
                         sequi omnis .</p>
-                    <span>50$</span>
+                    <span>50$</span> &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; <span>buy</span>
 
 
                 </div>
@@ -139,7 +139,7 @@
                 <div class="content">
                     <h3>our special coffee</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
-                    <span>50$</span>
+                    <span>50$</span> &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; <span>buy</span>
 
 
                 </div>
@@ -151,7 +151,7 @@
                     <h3>our special coffee</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem asperiores repudiandae fugit
                         sequi omnis adipisci nihil cupiditate explicabo .</p>
-                    <span>50$</span>
+                    <span>50$</span> &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; <span>buy</span>
 
 
                 </div>
@@ -163,7 +163,7 @@
                     <h3>our special coffee</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem asperiores repudiandae fugit
                         sequi omnis adipisci nihil .</p>
-                    <span>50$</span>
+                    <span>50$</span> &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; <span>buy</span>
 
 
                 </div>
@@ -175,7 +175,7 @@
                     <h3>our special coffee</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem asperiores repudiandae fugit
                         sequi omnis adipisci .</p>
-                    <span>50$</span>
+                    <span>50$</span> &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; <span>buy</span>
 
 
                 </div>
